Table user.user_info {
  id                                    uuid      [unique, default: "uuid_generate_v4()"]
  user_id                               int       [primary key, increment]
  name                                  varchar   [not null]
  email                                 varchar   [unique, not null]
  password                              varchar   [not null]
created_at                              timestamp [default: "now()"]
  role                                  varchar   [not null]
}

Table user.user_jwt {
  user_id                               int       [primary key, increment]
  jwt                                   varchar   [not null]
  last_logged_in                        timestamp [not null]
}

Table services.service_info {
  service_id                              uuid        [default: "uuid_generate_v4()"]
  description                             varchar     [not null]
}

Table service_professional.service_professional_info {
  service_professional_id               uuid      [default: "uuid_generate_v4()"]
  user_id                               int       [primary key, increment]
  name                                  varchar   [not null]
  phone                                 int       [unique, not null]
  date_created                          varchar   [not null]
  description                           varchar   [not null]
  service_keywords                      JSON      [null]
  service_id                            uuid      [null]
  experience_years                      int   [not null]
  location                              varchar   [not null]
  city                                  varchar   [not null]
  state                                 varchar   [not null]
  country                               varchar   [not null]
  pincode                               varchar   [not null]
  record_status                         varchar   [not null]
}

Table customer.customer_info {
  customer_id                           uuid      [default: "uuid_generate_v4()"]
  user_id                               int       [primary key, increment]
  location                              varchar   [not null]
  city                                  varchar   [not null]
  state                                 varchar   [not null]
  country                               varchar   [not null]
  pincode                               varchar   [not null]
  phone                                 int   [not null]

}

Table booking.booking_info {
  booking_id                            uuid        [default: "uuid_generate_v4()"]
  service_professional_id               int         [not null]
  customer_id                           varchar     [not null]
  start_time                            timestamp   [not null]
  end_time                              timestamp   [not null]
  status                                varchar     [not null]
  price                                 varchar     [not null]
}

Table request.request_info {
  request_id                            uuid        [default: "uuid_generate_v4()"]
  customer_id                           int         [not null]
  keywords                              JSON        [not null]
  service_id                            uuid
  start_time                            timestamp   [not null]
  end_time                              timestamp   [not null]
  quote_price                           varchar     [not null]
  status                                varchar     [not null]
}

Table reviews.reviews_info {
  review_id                              uuid        [default: "uuid_generate_v4()"]
  service_professional_id                uuid        [not null]
  booking_id                             uuid        [not null]
  rating                                 int         
  review_provided                        varchar     [not null]
  remarks                                varchar
  currency                               varchar     [not null]    
  paid_price                             int         [not null]
}


Ref: reviews.reviews_info.review_id > service_professional.service_professional_info.service_professional_id
Ref: reviews.reviews_info.review_id > customer.customer_info.customer_id
Ref: booking.booking_info.booking_id > customer.customer_info.customer_id
Ref: booking.booking_info.booking_id > service_professional.service_professional_info.service_professional_id
Ref: booking.booking_info.booking_id - reviews.reviews_info.review_id
Ref: user.user_info.user_id - user.user_jwt.user_id
Ref: user.user_info.user_id - customer.customer_info.customer_id
Ref: user.user_info.user_id - service_professional.service_professional_info.service_professional_id
Ref: request.request_info.request_id > customer.customer_info.customer_id
Ref: request.request_info.request_id - booking.booking_info.booking_id
Ref: services.service_info.service_id < request.request_info.request_id
